# idioms

./: .clang-format
weak_this/: CMakeLists.txt  main.cpp
